--- a/kurento-room-demo/src/main/resources/static/index.html
+++ b/kurento-room-demo/src/main/resources/static/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+<script>document.domain = "cawamo.com";</script>
+
 <title>Kurento Room Demo</title>
 <meta name="author" content="kurento.org">
 <link rel="shortcut icon" href="img/kurento.png" type="image/png" />
